full-moon/tests/cases/fail/parser/while-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/while-4
---
error[ast]: unexpected token `call`. call (expected `do` after condition)
  ┌─ source.lua:2:2
  │
2 │     call()
  │     ^^^^

error[ast]: unexpected token `end`. end (unexpected token, this needs to be a statement)
  ┌─ source.lua:3:1
  │
3 │ end
  │ ^^^


